--- a/Sewa_Lapangan/Views/Admin/AdminDashboardForm.resx
+++ b/Sewa_Lapangan/Views/Admin/AdminDashboardForm.resx
@@ -117,4 +117,195 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnDashboard.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAArpJREFUeF7t2k+ITWEYx3H/o2SDUsqfjGIxFCOULCjZUdiwUBZssCcLSWwsLEhZ
+        EBsrWWCDUhRZKYthY/xJIopGaDS+j5567+25T3MbzJ2pM+f3qVPT+b3nnvM+c877zrznTpggIiIiIiIi
+        IiIiIiIiIiIySsxsO/ANeG5m83LeDjADeAgMAIdzXhvAHSuAAzlvB9gcjnuZ89oA7odCHMx5O8DWcNzb
+        nNeGCvgPgLnAGeAF8NnMduUCAlc9G2bzsa+lgEBPyfqAi8DifP5KA5YC7xqdLh3fm8dA4GZsMxSgN4+B
+        ZrahtZV9Bdbn66gkM5sIPEkd9I5fArYB/T4LA0uAD7ldVmbernIn/gQOAceGaPfGzKbn66kcYE3unAMw
+        s+P+uAGrgHu5TTvA03LXLSiP/kBu44Cd+Xoqxx/V3LExdDxfT+UA+3KvxgpwKl9P5aiAI6QCjpAKOEKx
+        gMAP4DHwaBS3L+O2gGa2P+edlv7IHl8FBHbkvNOAlbUpoK/lATfKdsHMpoTsSMjO+n80ITsZspYi1a2A
+        fY2s5F0ha45lJZvt+81sKvA77B80s8nhuFoV8FUjK3nbAprZHN+vArZmvSFz80P2PmSDwCzf78Xy2Txk
+        381sUjiuPgU0s2W+LljWBjfGDOgOWcvSlJmtDllPzGpVwNFQqwL6IwtsKlt3yhaGbHnKfD2wkTXHzZLV
+        qoDPQuYTQ/PVpi/Vh+yXmc30/WUM7A+Z/1zPMVCz8F9QAUdomAIeBR6U7ZqZTQvZ6ZBdTo/puZCdb37g
+        OC1gc0kf2J3zTgPWhvOdyHnlAOtCh+7Gu6zT/C71t33hfHtym8opnYqz7Wvgtr8D7vB2q3xJqXGej42Z
+        u/KAFeXbCGOiLNxuyddRaWa2CLgCfMod7iD/RsJ1/4Xl84uIiIiIiIiIiIiIiIiIiPyPP2jpX8uHqk9J
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAABI9JREFUeF7tmWmMnVMYx0tRxYi1hIoltBhrSarhAyFBIpWmSHxQWyhSJiKKL9Qe
+        QS2170WoJZSIqCVtShOCxG5sraWoWosQ2++Rf/O/euZ0OiOd9MO99/klb+a+z3vOezP/+5zzLGfQoCRJ
+        kiRJkiRJkiRJkiRJkiRJkiRJkiRZBUTEasD3wJ8DuP4CPq/f3RZYQAkwNCJWX8lrA2BJ/e62oBBwiO6B
+        XYHFwHf9XN8AIzxn/RQQhgC7AU8CV0fEhn1dwI3Ao0BnCrhMwK8lXsMbBbAz8DwwC9ihsA8FbgDmp4DL
+        BNSy3Aw4FbgCOAl4FjgHuAB4HDiteLY18GkKuLyARwOTI+JIL+lLgCsj4uHqWQpYCfglcDuwbvF8Gwv3
+        ADC8Ybdo04FPUkALGBHbATOAW4Bt+7oi4h7gXgmcAvZMY3YCPnZw6Ov6SIJ7TgoIbGohVubasq0EjIi1
+        gd0jYg0LKI9aMsDrXb97zYjYo0yFWgoL9irwgaPuHcChEbFWPfb/4gB0GHCXq5gPgbn1uJYAGCXx/Hk4
+        cAbwYkS8JnHr8f0hLwbeBmYDk4At/CMtUBJej296gEuBy/Q5IgYDt8r7gF+Uvuifj4iDgGvsUScCG6lp
+        AOwDnAKMjYj1/I5NIuInLV3gseJ7VNGcX353SwB0R8RejfuI2BE4BPjNpdlL9qizLd4TfvYZ8JZTHJV1
+        30bEucAJ2gMjYv8qT9wXeOO/L24FXPgvqJcqcJvFm6QKQ95m++EWbkYpup+NdNJ9HzATmFY+t8d+BWxf
+        2psaLSlgamnzHrZYCXFh09K+XsEgIvYrx/eG2lrAwl5+GHVsJpe2pgZ4U0ursh2gANK4t6CPAE8rxyvH
+        +vng2ia87MdUtgOBV0pb06JWlJZUY3kW9mnAecX9MRKjTGscrbu8P/7qJTteYjfGRMQU4KrGvW1LvRvY
+        qrQ3JW5J3VTavE8tbHSWPW5jYFFEHAecCcxTwADuVL7oimVCRMxRAq5xfo+asfPL9/t9mtdV25sO4Blg
+        XGUbI28rbbYrXXnKweXg0tNKPF9e+bKPApRAj6rGqP01s7Q1JcBE4AfgQeAI5Xxu3U+px/YH0NHYCpw0
+        K91Z5JJQeWYHcBTwEPAjcGz9jqYkIjZ3t/k5J85/A6Prcf0BXAe8Lu9s2NwK+9k5o/7OioiTgWE9Z7cI
+        7qJcDrzv3t4u9ZgVYa8bB7znEm60qhWfqSjX7KjntCSuKnTOoQDTXT+vcbmms5ClAjlfVBQX8ryL6zkt
+        C7C3qwx5oqqKf5z4DvNh+XKNBQt4tz2ty22xs4D7VxRoWhYHkhciYh11Y7yv3ay+noPNF4qoEsnNhpHF
+        XEVcnZ/87h+hs+fb2wCf6yqYKJConaVcbrxF2dOtKSXNf7gqkWCKqiO8B8513dxrZdI2+MjyWifQ8qaL
+        bFdzQZ6pxFktf6UmF/qzTuLmDaQJ2zL4bLfbQeAdl2mne0883gLLKyd4r1T601mXhG2Nm6g6y9B+ONXJ
+        tmpflXBqQIz1clfwmFjPT5IkSZIkSZIkSZIkSZIkSZIkSZIkSZJVzb+/npN9WTWaPwAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAzFJREFUeF7t2k2ITlEYwHHflGSBlMVEihIpUmNjzMoCKaPZUBbytaOUsrFSlLGw
+        sPBNWdhgoXwWRmJhoSx8ZCEfGxQmH8OY/6OHc6dzH/fOvPMa6Z73+dWped/z3HPOfXrfe8/73Bk2zDnn
+        nHPOOeecc84555xzzjnnnBsiwCzgFPAcePeX7a2I3Ae2icgoO1dygCXAJ/kHgGsiMsbOmQwRGQe8sic+
+        lIBddt5kACvtCQ814KmdNxnARnvCCugFvg+22XFUeH+EnTsJIrKp4IQ7gQl60nW0pQBmvB4RGWnnTkJJ
+        AjtsXK2AscBnM17DJfArcAjYV0frLBivsRI41BoygbovLNggZ21Qe8aGSyBwWURG29iM9gFXo3hN9gMR
+        uQncAZ4BP6L+hkvgQRtnAXs0DlhclBy9iwOrgYthG/NHTBJKEtgDnAWOFrTDQIuITLRjlQEWiMhw+34S
+        ihJYBugClsfHA/OA3cAF4G7YQ54BtgJT4tgklSUQeA08AV6E13qda86OA+YAV+xxMaAbOKBf5/ysCSlK
+        IHA+/soBx4G26HU78MUeVwZ4DMzsmzQlJQk8EscA86O/9cbQa48ZCPASmBaPm4SSBKob+kkELolIU4ht
+        0uugja8VcN3OX3lFCYwB57JY4LTtz4RKtl4X22wxIQasyq+g4mpI4LoQN7msXKWAE9mYoaRfSCvUuQVU
+        3UAJFJHpGgestR0xvdFkYwJvbH8m1A3H5xZRZf0lEPiWFUJFZK/tj5kErge26DElN5yFuUVU2QAJ7Mri
+        tLxl+42T+ZF/A27ZQGCZjausARLYne0Hgf22PxY23s3AjKi1isiHgtgWu47K6i+BCpiqccBm21evpPaD
+        NSRwhcbpg3fbVw/gkV1DpekF355kTK99Uext2z9YwI78Ciou/EtHfxvf91kxoOiJ22CEn3PpbGEyWuez
+        JxvTclUU22H7axH2f635mRMRHkUeK/t0had0czVW94Uaa2P6E8paa+y8yQFmAxuA7QWt7zesbm1CwfSj
+        TZYFPAQW5WdyvwCTgJ3APf2URknTJ3daoW5P9lmIc84555xzzjnnnHPOOeecc865/+4n7Xh3b1vNgG4A
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnLogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAiNJREFUeF7t2buPTVEYhvEZ4hYqCYkICoVCVAqhUYqCRBQqvb9AozGlQq+jkLgU
+        IiqFWiEKjSgmg4iSEPfq+WTFOsk+b4bzLSOSdfb7S1az91orZ56ck9mXhQUzMzMzMzMzMzMzMzMzM7M1
+        iIin8Y8Aj3X/uacRhoDvwLfMmMzX/eeeRhsC3gBXgSMRsahrJyJic53vgL8DvAKuRMThVfZwwBbAMnBs
+        sIcDtirfxsEeDthKAm7kl8/Tu4+AhskaBiyAC8D54bFR0DBZGvBPgH3AErBTz3VPw2Q1Blyqa14Au/V8
+        1zRMVmPAHcCzum45IvbqnG5pmKyWgAWwHXhS174G9uucLmmYLA0I7AIOzhhHgZW6/i1wYLhHlzRM1jAg
+        sAf4oXNmKbeK05+mQ/pHZcl14DbgEfA8Md4P9ngw/Wk6NJ0lT3/CGeUnHBEf6/r7wCad0x0Nk9UaEDhe
+        7lTq2tsRsUHndEnDZLUELA8egK916Y2IWK9zuiVd0hoDXqxrrkXEOj3fNQ2T1RKwfOOAQ3p8LmiYLPkv
+        vAg8BG5N7z4CGibLzwMrDZPlgJWGyXLASsNkOWClYRrcBU7UcaocGGXA8iJDy/yt8oJd9597EXEZeKcx
+        ZgFe1kuX4bik+49CuS8FTgLXgQ8aazUtF9KjUl9RngZuAp803IQDJgBbgLPAHeCLA64BsBU4B9wrD0WB
+        MzrHzMzMzMzMzMzMzMzMzMzsf/sJpkfoYF+nQYsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
