--- a/Sewa_Lapangan/Views/User/UserDashboardForm.resx
+++ b/Sewa_Lapangan/Views/User/UserDashboardForm.resx
@@ -117,4 +117,233 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnDashboard.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAArpJREFUeF7t2k+ITWEYx3H/o2SDUsqfjGIxFCOULCjZUdiwUBZssCcLSWwsLEhZ
+        EBsrWWCDUhRZKYthY/xJIopGaDS+j5567+25T3MbzJ2pM+f3qVPT+b3nnvM+c877zrznTpggIiIiIiIi
+        IiIiIiIiIiIySsxsO/ANeG5m83LeDjADeAgMAIdzXhvAHSuAAzlvB9gcjnuZ89oA7odCHMx5O8DWcNzb
+        nNeGCvgPgLnAGeAF8NnMduUCAlc9G2bzsa+lgEBPyfqAi8DifP5KA5YC7xqdLh3fm8dA4GZsMxSgN4+B
+        ZrahtZV9Bdbn66gkM5sIPEkd9I5fArYB/T4LA0uAD7ldVmbernIn/gQOAceGaPfGzKbn66kcYE3unAMw
+        s+P+uAGrgHu5TTvA03LXLSiP/kBu44Cd+Xoqxx/V3LExdDxfT+UA+3KvxgpwKl9P5aiAI6QCjpAKOEKx
+        gMAP4DHwaBS3L+O2gGa2P+edlv7IHl8FBHbkvNOAlbUpoK/lATfKdsHMpoTsSMjO+n80ITsZspYi1a2A
+        fY2s5F0ha45lJZvt+81sKvA77B80s8nhuFoV8FUjK3nbAprZHN+vArZmvSFz80P2PmSDwCzf78Xy2Txk
+        381sUjiuPgU0s2W+LljWBjfGDOgOWcvSlJmtDllPzGpVwNFQqwL6IwtsKlt3yhaGbHnKfD2wkTXHzZLV
+        qoDPQuYTQ/PVpi/Vh+yXmc30/WUM7A+Z/1zPMVCz8F9QAUdomAIeBR6U7ZqZTQvZ6ZBdTo/puZCdb37g
+        OC1gc0kf2J3zTgPWhvOdyHnlAOtCh+7Gu6zT/C71t33hfHtym8opnYqz7Wvgtr8D7vB2q3xJqXGej42Z
+        u/KAFeXbCGOiLNxuyddRaWa2CLgCfMod7iD/RsJ1/4Xl84uIiIiIiIiIiIiIiIiIiPyPP2jpX8uHqk9J
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAABK9JREFUeF7tm2vIpVMUx4dx19TIfeQSoym5z8h1fMGHcclMFF80cr8MX5CI+CAp
+        ioxJbo1pyqAZjVxySRQhIUNC8cX9MoORcQm/pT/rvO2znTPO7TV6n/+vVp2z9l77eXv+z7v32ms/Z9Ik
+        Y4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4YA2Bo4FDh8A9khEbFZ/Xc1EmBn4FPgE+CjDWRf
+        AO9ExFb139c4gPOBZ2r/f0lEbAy8B8yp2xoHcCnwUO3vFeBEYDGwpE+7E9i7GOdlYF776A1kGEEiYifg
+        J+Aa4Ip+LCLuB15pjWVBkmEEAfYHvqr9vQAcDHxWfLcgYlSCAFMiYiYwSxYRU4t+u7f8iomIyRakC6MQ
+        BJgBfJPZ2seZsX0HHABcktOa/LLVwItKdS1IB0YkyHXA0qrtDuCWzJ6Ob/kjYhPgy4g4z4J0oJMgwPS8
+        mSuBhRFxYNku8sY+FQUUdPO32vLj71rg85oWRNSC6GkGfgDuBS4Abs/v86s4TUdrgF2BaQPaSZrmcjwL
+        IkpBtDDnHD8PmJ1iaJ9xJPAjsEsRp0VZ68YRQ9gZRVJgQUQliIR4M7MiCbAIWJvZ05PAhUWcBPkN+HAI
+        0yJvQUoqQY4GrgaOA95O3xPA2cC5wKlFXFvaOghV2mxBRL2GpK8U5HEJUranX4KsBS4bwpQ4WJCSQQWJ
+        iO2yJrV0SLsxr2NBxKCCjBoLkqxHkFX5+THgfeA54HTghnItGRUWJOlRkOURcX1u6JZp3o+I13W4FBFn
+        lrH9EBF7aspSBhcR3wN3AdvX/RpFj4Ioy9oLWJe+hblLnwv8HBFblPG9AJyTqfUDeUh2cWZ0qyPi2Lp/
+        YygF0bl2bga/LQRZoQ1cROymnXn6blb9Kvv/0e9TnYJrf3NUhzZNi6oMTK/bJjxZulCm82rumu8D3siU
+        tCWIyuqT9blVUge2BDbvJkiWVTReN1sFLChjMm5+lm4W6QCrbp/wZHHveU0/aSqbnKUpA3ir7l+zHkGe
+        VpZWjDtmEfFCFhinqp4VERtljOpma1TIBA4DPi/HbAQpyLTi+yPARXr6gf3ae/+TQhCVW15L09OvkvxY
+        3aski5G/SIh8GO7Ja0qMmeoTEXuoTx074dGCXM7Vea6xpL1Xd/SfkfWsk7MIKZsDbFv3bRERm+ZiPiPP
+        5HVeojVrVqtPjvNue2QDAB4FHswFWzf3BOBrnXXUfTuR872KhIrtx5a3hM8d/9hDkecsLwFXtV2sCQA7
+        ZFr7az7pMs3vc+u+ncj0V1NWK7YfU9xtemuyGE9irdAeZ5BUesKgF9X0ZObTebkW5bpPTa4BOjs/phXb
+        j2WJ/9ksUGot0X+Fzt6XRcQ29fUai25G7gP2rdtKgINyE/dXSjwo+YLEaSrHSKS63fx9kzSVLK79Jbmz
+        Xln7zTiQNaZ19f6iJCJuAm6t/WYcAHbUqzqqwEbEw50M+CArtFPqeDNigCvzZi/4F9NPCAau9poeAa4F
+        7q79NdrH6IW32m9GDHBKZlr1D2tq0457dh1vxgFgnw4/PauteSVyY4wxxhhjjDHGGGOMMcYYY4wxxhhj
+        jDHGGGOMMcYY87/nT95PrMd2IhQrAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vwAADr8BOAVTJAAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAA/1JREFUeF7tmlmIV3UUx9U22osKrRCiIoI2KDB90B4KKoqst6KghTZN6sWiFCp8
+        MgpJQSqIKMKoSLSgaJU2CYNo2ilCiTBDpdWSFj/f+Na5dOf0v870+L9zPjDM/M8598KcOed3lt9MmlQU
+        RVEURVEURVEURVEURVEURVEURVEUxfAjaYqkyVledAAcDdwGvAZs4x9+A74C1kq6XtIh+bkJj6SDgeXA
+        75IEfCbpUeCe+HoS+Dp0PwJ3SNorv2dCApwKbAJ2hdNOyjbGqQzMBl4IR24Ajsp2E4pw3vfAt8BZWd8F
+        cAXwC/AlMDXrJwSRthuBLcDxWT8WdjjwK/CmpD2yvvcAK4E/gTlZ1wCc57MPODDrDHBNpPOCrOs1wHQX
+        DODhrGsDzAsHTc86E+fiW45iSXtnfW8BFkeLckLWGbcqEaGbw4GrgQuynQEuDJtLsq63AG8DI1ne4Eob
+        Efo88Byw3U6SdGy2dTsD/AQ8lHW9ZaxfOJz3YPPZ6QmcPtrqX4A3gHeyvJcA+0bK3ZV1DcBLwB+usMDL
+        wH3AEdmuAXjCvWSW9xJgn0jHu7OuQdKhwLJolkciIke65mJglce9LO8twHe7q8DAYenznRG1A5vmiNQN
+        Wd5bgHXAx1lugLOjQjv6HIXLJf0AfDooAh3RwM+7O1N7B7AwIurkAbr9HXFN6obdi5KOybbG7UvYzM26
+        3iDpRODeSDU7Zn380quybZtxNNJTgHdjU9O/7Ywrp9uRGNl2uqJKehr4JNLUrJN0lWfj/Lykc5zqkg7I
+        OuMRLhx8bdYNNR7ugZtj0+J25H5Jh7dtvEAAlrh6hhO8OHX7stDz8SCHtgHOj2dejXd1tjlDh6Sl4ZRX
+        uvZ7Da093wrgc4dkPLvLzTFw7gD7eXZe4/j4btaM5fihANjqLXKWjwfgSOAiN9rAR+HIuZL29NzbnJ/h
+        NK+zVnvVH9HsaO9sj4aGWLs/kOX/lygSnjL8B9nactoa4LK85gr5xrZsKJH0OvDFoL5tEJLOAGYBp3hh
+        4IbZhUPSfr7/iChcC1yenWaAg4CbYsZ+NuuHDuDqiJZLsy4jaVqTkl10OQU40ykL7Ai79b24J4kV04eR
+        dv9ZQWWAmZIujgi7DrgFWBTn2pXtZWlcBcyP2dhO893II37H6LcOOU7HaGO+iUP+hqi03vU9I+l2YMZ4
+        7jOi8s4MRzXR5oZ8fi+qbhfAaW6aW6noaPmg6f1Cth14zOmeJ47YTC9wNIftjkjZGW27XhOV1NeXx/nn
+        Ru6zyhMI8JQjteVQb2rejwjbGbL3gBtdLEa/vfib6PFchW8FHo9/7fCEscIVOtsXRVEURVEURVEURVEU
+        RVEURVEURVEURVH0l78A2DVqrF+Mft4AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vwAADr8BOAVTJAAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnRiwayat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAzFJREFUeF7t2k2ITlEYwHHflGSBlMVEihIpUmNjzMoCKaPZUBbytaOUsrFSlLGw
+        sPBNWdhgoXwWRmJhoSx8ZCEfGxQmH8OY/6OHc6dzH/fOvPMa6Z73+dWped/z3HPOfXrfe8/73Bk2zDnn
+        nHPOOeecc84555xzzjnnnBsiwCzgFPAcePeX7a2I3Ae2icgoO1dygCXAJ/kHgGsiMsbOmQwRGQe8sic+
+        lIBddt5kACvtCQ814KmdNxnARnvCCugFvg+22XFUeH+EnTsJIrKp4IQ7gQl60nW0pQBmvB4RGWnnTkJJ
+        AjtsXK2AscBnM17DJfArcAjYV0frLBivsRI41BoygbovLNggZ21Qe8aGSyBwWURG29iM9gFXo3hN9gMR
+        uQncAZ4BP6L+hkvgQRtnAXs0DlhclBy9iwOrgYthG/NHTBJKEtgDnAWOFrTDQIuITLRjlQEWiMhw+34S
+        ihJYBugClsfHA/OA3cAF4G7YQ54BtgJT4tgklSUQeA08AV6E13qda86OA+YAV+xxMaAbOKBf5/ysCSlK
+        IHA+/soBx4G26HU78MUeVwZ4DMzsmzQlJQk8EscA86O/9cbQa48ZCPASmBaPm4SSBKob+kkELolIU4ht
+        0uugja8VcN3OX3lFCYwB57JY4LTtz4RKtl4X22wxIQasyq+g4mpI4LoQN7msXKWAE9mYoaRfSCvUuQVU
+        3UAJFJHpGgestR0xvdFkYwJvbH8m1A3H5xZRZf0lEPiWFUJFZK/tj5kErge26DElN5yFuUVU2QAJ7Mri
+        tLxl+42T+ZF/A27ZQGCZjausARLYne0Hgf22PxY23s3AjKi1isiHgtgWu47K6i+BCpiqccBm21evpPaD
+        NSRwhcbpg3fbVw/gkV1DpekF355kTK99Uext2z9YwI78Ciou/EtHfxvf91kxoOiJ22CEn3PpbGEyWuez
+        JxvTclUU22H7axH2f635mRMRHkUeK/t0had0czVW94Uaa2P6E8paa+y8yQFmAxuA7QWt7zesbm1CwfSj
+        TZYFPAQW5WdyvwCTgJ3APf2URknTJ3daoW5P9lmIc84555xzzjnnnHPOOeecc865/+4n7Xh3b1vNgG4A
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vwAADr8BOAVTJAAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="btnLogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAAiNJREFUeF7t2buPTVEYhvEZ4hYqCYkICoVCVAqhUYqCRBQqvb9AozGlQq+jkLgU
+        IiqFWiEKjSgmg4iSEPfq+WTFOsk+b4bzLSOSdfb7S1az91orZ56ck9mXhQUzMzMzMzMzMzMzMzMzM7M1
+        iIin8Y8Aj3X/uacRhoDvwLfMmMzX/eeeRhsC3gBXgSMRsahrJyJic53vgL8DvAKuRMThVfZwwBbAMnBs
+        sIcDtirfxsEeDthKAm7kl8/Tu4+AhskaBiyAC8D54bFR0DBZGvBPgH3AErBTz3VPw2Q1Blyqa14Au/V8
+        1zRMVmPAHcCzum45IvbqnG5pmKyWgAWwHXhS174G9uucLmmYLA0I7AIOzhhHgZW6/i1wYLhHlzRM1jAg
+        sAf4oXNmKbeK05+mQ/pHZcl14DbgEfA8Md4P9ngw/Wk6NJ0lT3/CGeUnHBEf6/r7wCad0x0Nk9UaEDhe
+        7lTq2tsRsUHndEnDZLUELA8egK916Y2IWK9zuiVd0hoDXqxrrkXEOj3fNQ2T1RKwfOOAQ3p8LmiYLPkv
+        vAg8BG5N7z4CGibLzwMrDZPlgJWGyXLASsNkOWClYRrcBU7UcaocGGXA8iJDy/yt8oJd9597EXEZeKcx
+        ZgFe1kuX4bik+49CuS8FTgLXgQ8aazUtF9KjUl9RngZuAp803IQDJgBbgLPAHeCLA64BsBU4B9wrD0WB
+        MzrHzMzMzMzMzMzMzMzMzMzsf/sJpkfoYF+nQYsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vgAADr4B6kKxwAAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
+        iSBY2QlfwCxI3AZbwY7FSEb8X3kn58jpt7tqmt7oqueXdFJd55yqOs+8XVVd0yMjIiIiIiIiIiIiIiIi
+        IiIiMnzMbBEwCew3syWxXWqk8G5ZAjxUiH2K4RUhPihDBNab2XPgI3C8cystlcK7GcPLgPtmttj7AieL
+        9d/jtlonhXejM7JuwF0P0cxOF+tm4/ZaJYV3PQT1E7gNTPlyaLsDnCnetzfAmvB25D7ANmAu9PlWLLcz
+        wBTetRDMn/C83V++DEzEELNWBpjCuxqC8I/qdm8HtgCfga9egWldVyWmce0KMIV3JYTgweTwDpTnPeAX
+        cDi1dVUi8CNXauOZ2ShwOQRQVt4xgLI9A06lPl2VmK7gzQ4xhXcpTHy+8lLb2bKtF+BiquBelegXo2aG
+        WBGeXzAmzGysn3vAwj1gaUUl+qlhNO5/qKXwvHLKic6l8JYBj8q2fgBPgJUVleh/qGaEWBcesAp4Vrb9
+        DWAaWFNRib7P4Q/Rb0fCxDw8n7BPfLps+xfADLCuohI3x+MZOn5TXEwoh7cWeFdOdhDAJ2BjDNHfx+MZ
+        Ov7FHzgHPAXGfR3wuDOCwfmpIG173JfTFX0sHk8jAK9iAIPyio77aSzgdQwgSue2E/7cD3gf26O2Bfgm
+        BlACXgDLc38zWwG8jP1KbQvwbQygBBzsMeZQ7FdqW4ALXYHnvxeHMbtjp1LbApyJAQQKsE4fFwUFWAf4
+        EAMIFGAd/19uDCBQgHUW+ggDW3uMmYz9Sn5rFMc0FnA+BpABX4DVPcb4A4PZ2D8DLsQxjZUecW3yHw4B
+        +4C9wB5gpz+lif0zYANwBDiaXr7sr135FwsiIiIiIiIiIiIiIiIiIiLyH/kNEi/UBwBXk/QAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
 </root>
