--- a/Sewa_Lapangan/Views/User/UserDashboardForm.resx
+++ b/Sewa_Lapangan/Views/User/UserDashboardForm.resx
@@ -193,7 +193,7 @@
   <data name="btnPesanLapangan.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAABK9JREFUeF7tm2vIpVMUx4dx19TIfeQSoym5z8h1fMGHcclMFF80cr8MX5CI+CAp
+        vAAADrwBlbxySQAABK9JREFUeF7tm2vIpVMUx4dx19TIfeQSoym5z8h1fMGHcclMFF80cr8MX5CI+CAp
         ioxJbo1pyqAZjVxySRQhIUNC8cX9MoORcQm/pT/rvO2znTPO7TV6n/+vVp2z9l77eXv+z7v32ms/Z9Ik
         Y4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4YA2Bo4FDh8A9khEbFZ/Xc1EmBn4FPgE+CjDWRf
         AO9ExFb139c4gPOBZ2r/f0lEbAy8B8yp2xoHcCnwUO3vFeBEYDGwpE+7E9i7GOdlYF776A1kGEEiYifg
@@ -234,10 +234,10 @@
         RK5CYII=
 </value>
   </data>
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnPembayaran.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAA/1JREFUeF7tmlmIV3UUx9U22osKrRCiIoI2KDB90B4KKoqst6KghTZN6sWiFCp8
+        vAAADrwBlbxySQAAA/1JREFUeF7tmlmIV3UUx9U22osKrRCiIoI2KDB90B4KKoqst6KghTZN6sWiFCp8
         MgpJQSqIKMKoSLSgaJU2CYNo2ilCiTBDpdWSFj/f+Na5dOf0v870+L9zPjDM/M8598KcOed3lt9MmlQU
         RVEURVEURVEURVEURVEURVEURVEUxfAjaYqkyVledAAcDdwGvAZs4x9+A74C1kq6XtIh+bkJj6SDgeXA
         75IEfCbpUeCe+HoS+Dp0PwJ3SNorv2dCApwKbAJ2hdNOyjbGqQzMBl4IR24Ajsp2E4pw3vfAt8BZWd8F
@@ -257,7 +257,7 @@
         RVEURVEURVEURVH0l78A2DVqrF+Mft4AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAArNJREFUeF7t2kuPDFEYxvEZQ0hcdmzFyoIPIhmxYFzGLbEQsSU2QljYSFiJuLMY
@@ -278,7 +278,7 @@
   <data name="btnRiwayat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAAzFJREFUeF7t2k2ITlEYwHHflGSBlMVEihIpUmNjzMoCKaPZUBbytaOUsrFSlLGw
+        vAAADrwBlbxySQAAAzFJREFUeF7t2k2ITlEYwHHflGSBlMVEihIpUmNjzMoCKaPZUBbytaOUsrFSlLGw
         sPBNWdhgoXwWRmJhoSx8ZCEfGxQmH8OY/6OHc6dzH/fOvPMa6Z73+dWped/z3HPOfXrfe8/73Bk2zDnn
         nHPOOeecc84555xzzjnnnBsiwCzgFPAcePeX7a2I3Ae2icgoO1dygCXAJ/kHgGsiMsbOmQwRGQe8sic+
         lIBddt5kACvtCQ814KmdNxnARnvCCugFvg+22XFUeH+EnTsJIrKp4IQ7gQl60nW0pQBmvB4RGWnnTkJJ
